post-edit-ability

--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,5 +1,2 @@
-= simple_form_for @post do |f|
-  = f.input :title
-  = f.input :link
-  = f.input :description
-  = f.button :submit
+%h1 Add New Inspiration
+= render 'form'
