--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,6 @@
 - @posts.each do |post|
-  %p= link_to post.title, post
+  %h2= link_to post.title, post
+  =link_to 'Edit', edit_post_path(post)
+  =link_to 'Delete', post_path(post), method: :delete
 
 = link_to 'New Post', new_post_path
