--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -3,4 +3,5 @@
 %p= @post.description
 
 = link_to 'Edit', edit_post_path
+= link_to 'Delete', post_path, method: :delete, data: { confirm: 'Are you sure?'}
 = link_to 'Back', posts_path
