image-for-posts

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,7 @@
 - @posts.each do |post|
-  %h2= link_to post.title, post
+  = link_to(post) do
+    = image_tag post.image.url(:small)
+    %h2= post.title
   =link_to 'Edit', edit_post_path(post)
   =link_to 'Delete', post_path(post), method: :delete
 
