--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -27,10 +27,10 @@
               = post.user.name
             %p.buttons
               %span
-                %i.fa-comments-o
+                %i.fa-comments-0
                 = post.comments.count
               %span
-                %i.fa-comments-o-up
+                %i.fa-comments-0-up
                 = post.get_likes.size
 
 
