--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -22,4 +22,22 @@
       - if @post.user == current_user
         = link_to 'Edit', edit_post_path, class: 'data'
         = link_to 'Delete', post_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'data'
-
+    #random_post
+      %h3 Random Inspiration
+      .post
+        .post_image
+          = link_to (image_tag @random_post.image.url(:small)), post_path(@random_post)
+        .post_content
+          .title
+            %h2= link_to @random_post.title, post_path(@random_post)
+          .data.clearfix
+            %p.username
+              Shared by
+              = @random_post.user.name
+            %p.buttons
+              %span
+                %i.fa-comments-0
+                = @random_post.comments.count
+              %span
+                %i.fa-comments-0-up
+                = @random_post.get_likes.size
